# crabcloud

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
config/: config.toml.example  (+1 more)
crates/crabcloud-activity/: Cargo.toml
crates/crabcloud-activity/src/: emitter.rs  error.rs  lib.rs  service.rs  settings.rs  sql.rs  subjects.rs  types.rs
crates/crabcloud-activity/tests/: activity_e2e.rs
crates/crabcloud-app/: Cargo.toml  Dioxus.toml  build.rs
crates/crabcloud-app/assets/: app.css
crates/crabcloud-app/src/: app.rs  cli.rs  lib.rs  main.rs  server_fns.rs  telemetry.rs
crates/crabcloud-app/tests/: server_fns_activity.rs  server_fns_files.rs  server_fns_public_link.rs  server_fns_search.rs  server_fns_trash.rs  server_fns_versions.rs
crates/crabcloud-cache/: Cargo.toml
crates/crabcloud-cache/src/: lib.rs  trait_def.rs
crates/crabcloud-core/: Cargo.toml
crates/crabcloud-core/src/: activity_sweeper.rs  appconfig.rs  error.rs  expiration_sweeper.rs  lib.rs  mail_queue.rs  mail_queue_cleanup.rs  mail_worker.rs  preview_cache_cleanup.rs  publiclinks.rs  search_indexer.rs  state.rs  trash_sweeper.rs  versions_sweeper.rs
crates/crabcloud-core/tests/: app_state_build.rs  expiration_sweeper_e2e.rs  mail_log_transport_e2e.rs  mail_queue_cleanup_e2e.rs  mail_queue_e2e.rs
crates/crabcloud-db/: Cargo.toml
crates/crabcloud-db/src/: core_migrations.rs  lib.rs  migrate.rs  pool.rs
crates/crabcloud-db/tests/: migrate_end_to_end.rs
crates/crabcloud-filecache/: Cargo.toml
crates/crabcloud-filecache/src/: error.rs  lib.rs  locks.rs  mimetypes.rs  populate.rs  propagate.rs  properties.rs  schema.rs  storages.rs
crates/crabcloud-filecache/tests/: apply_events.rs  populate.rs  scanner.rs
crates/crabcloud-fs/: Cargo.toml
crates/crabcloud-fs/src/: error.rs  lib.rs  mount.rs  path.rs  uploads.rs  view.rs
crates/crabcloud-fs/tests/: appstate_wiring.rs  share_propagation.rs  uploads.rs  view_activity.rs  view_moves.rs  view_reads.rs  view_trash.rs  view_versions.rs
crates/crabcloud-http/: Cargo.toml
crates/crabcloud-http/src/: auth_context.rs  csrf.rs  error.rs  lib.rs  router.rs
crates/crabcloud-http/tests/: asset_render_regression.rs  auth_layer.rs  cors.rs  dav_basic.rs  dav_lock.rs  dav_moves.rs  dav_propfind.rs  dav_props_write.rs  dav_trashbin.rs  dav_uploads.rs  dav_versions_copy.rs  dav_versions_get.rs  dav_versions_propfind.rs  files_preview_e2e.rs  files_sharing_e2e.rs  files_zip_e2e.rs  http_end_to_end.rs  ocs_activity.rs  ocs_search.rs  ocs_trashbin.rs  ocs_versions.rs  public_dav_e2e.rs  public_link_e2e.rs
crates/crabcloud-mail/: Cargo.toml
crates/crabcloud-mail/src/: envelope.rs  error.rs  lib.rs  mailer.rs  templates.rs  transport.rs
crates/crabcloud-ocs/: Cargo.toml
crates/crabcloud-ocs/src/: capabilities.rs  core_caps.rs  envelope.rs  lib.rs
crates/crabcloud-preview/: Cargo.toml
crates/crabcloud-preview/src/: cache.rs  error.rs  ladder.rs  lib.rs  provider.rs
crates/crabcloud-publiclinks/: Cargo.toml
crates/crabcloud-publiclinks/src/: auth_layer.rs  context.rs  cookie.rs  error.rs  lib.rs  passwords.rs  ratelimit.rs  tokens.rs
crates/crabcloud-publiclinks/tests/: auth_layer_e2e.rs
crates/crabcloud-search/: Cargo.toml
crates/crabcloud-search/src/: error.rs  lib.rs  parse.rs  service.rs  sql.rs  types.rs
crates/crabcloud-search/tests/: search_e2e.rs
crates/crabcloud-server/: Cargo.toml  Dioxus.toml  build.rs
crates/crabcloud-server/src/: cli.rs  main.rs  telemetry.rs
crates/crabcloud-sharing/: Cargo.toml
crates/crabcloud-sharing/src/: error.rs  lib.rs  mail.rs  permissions.rs  service.rs  sql.rs  types.rs
crates/crabcloud-sharing/tests/: sharing_e2e.rs
crates/crabcloud-storage/: Cargo.toml  build.rs
crates/crabcloud-storage/data/: mimetypes.txt
crates/crabcloud-storage/src/: error.rs  lib.rs  meta.rs  path.rs
crates/crabcloud-storage/tests/: local_specific.rs  memory_specific.rs  trait_suite.rs
crates/crabcloud-trash/: Cargo.toml
crates/crabcloud-trash/src/: error.rs  lib.rs  service.rs  sql.rs  types.rs
crates/crabcloud-trash/tests/: trash_e2e.rs
crates/crabcloud-ui/: Cargo.toml  Dioxus.toml  build.rs
crates/crabcloud-ui/assets/: app.css
crates/crabcloud-ui/src/: app.rs  assets.rs  context.rs  hydration.rs  lib.rs  main.rs  server.rs  server_fns.rs  ssr.rs
crates/crabcloud-ui/tests/: server_fns_files.rs  ssr_routes.rs
crates/crabcloud-users/: Cargo.toml
crates/crabcloud-users/src/: app_password.rs  auth_token.rs  cli.rs  email.rs  error.rs  group.rs  lib.rs  notification_prefs.rs  password.rs  service.rs  user.rs
crates/crabcloud-users/tests/: notification_prefs_e2e.rs  users_flow.rs
crates/crabcloud-versions/: Cargo.toml
crates/crabcloud-versions/src/: error.rs  lib.rs  service.rs  sql.rs  types.rs
crates/crabcloud-versions/tests/: versions_e2e.rs
crates/crabcloud-zip/: Cargo.toml
crates/crabcloud-zip/src/: compression.rs  error.rs  http.rs  lib.rs  mpsc_writer.rs  stream.rs  types.rs  walk.rs
crates/rustcloud-config/: Cargo.toml
crates/rustcloud-config/src/: lib.rs  loader.rs  test_support.rs  types.rs
crates/rustcloud-core/: Cargo.toml
crates/rustcloud-core/src/: appconfig.rs  bootstrap.rs  error.rs  lib.rs  state.rs
crates/rustcloud-core/tests/: app_state_build.rs
crates/rustcloud-db/: Cargo.toml
crates/rustcloud-db/src/: core_migrations.rs  error.rs  lib.rs  migrate.rs  pool.rs
crates/rustcloud-db/tests/: migrate_end_to_end.rs
crates/rustcloud-http/: Cargo.toml
crates/rustcloud-http/src/: csrf.rs  error.rs  lib.rs  router.rs
crates/rustcloud-http/tests/: cors.rs  http_end_to_end.rs
crates/rustcloud-ocs/: Cargo.toml
crates/rustcloud-ocs/src/: capabilities.rs  core_caps.rs  envelope.rs  format.rs  status.rs
crates/rustcloud-server/: Cargo.toml  build.rs
crates/rustcloud-server/src/: cli.rs  main.rs  tracing.rs
crates/rustcloud-ui/: Cargo.toml  Dioxus.toml  build.rs
crates/rustcloud-ui/assets/: app.css
crates/rustcloud-ui/src/: app.rs  assets.rs  context.rs  lib.rs  main.rs  ssr.rs
crates/rustcloud-ui/tests/: ssr_routes.rs
(+286 files in other folders)
