[workspace]
members = [
    "crates/crabcloud-cache",
    "crates/crabcloud-config",
    "crates/crabcloud-core",
    "crates/crabcloud-db",
    "crates/crabcloud-http",
    "crates/crabcloud-i18n",
    "crates/crabcloud-ocs",
    "crates/crabcloud-server",
    "crates/crabcloud-ui",
    "crates/crabcloud-users",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
authors = ["Crabcloud Contributors"]
repository = "https://github.com/robot-head/crabcloud"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "tower-log", "matched-path", "original-uri", "query", "form"] }
base64 = "0.22"
bcrypt = "0.19"
clap = { version = "4.5", features = ["derive", "env"] }
cookie = { version = "0.18", features = ["percent-encode"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
hyper = { version = "1.5", features = ["http1", "server"] }
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "mysql",
    "postgres",
    "chrono",
    "macros",
    "migrate",
] }
subtle = "2.6"
thiserror = "2"
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mysql", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "time"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "limit", "cors", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

polib = "0.3"
accept-language = "3.1"
quick-xml = { version = "0.39", features = ["serialize"] }

# Internal workspace deps. Entries are added by subsequent tasks when their crate exists.
crabcloud-cache = { path = "crates/crabcloud-cache" }
crabcloud-config = { path = "crates/crabcloud-config" }
crabcloud-core = { path = "crates/crabcloud-core" }
crabcloud-db = { path = "crates/crabcloud-db" }
crabcloud-http = { path = "crates/crabcloud-http" }
crabcloud-i18n = { path = "crates/crabcloud-i18n" }
crabcloud-ocs = { path = "crates/crabcloud-ocs" }
crabcloud-ui = { path = "crates/crabcloud-ui" }
crabcloud-users = { path = "crates/crabcloud-users" }
email_address = "0.2"
rpassword = "7"
assert_cmd = "2"

dioxus = { version = "0.7", default-features = false, features = ["macro", "html", "signals", "hooks"] }
dioxus-history = "0.7"
dioxus-router = { version = "0.7", default-features = false }
dioxus-ssr = "0.7"
dioxus-web = { version = "0.7", default-features = false }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
rust-embed = { version = "8", features = ["debug-embed", "include-exclude", "interpolate-folder-path"] }

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
