[workspace]
members = [
    "crates/crabcloud-app",
    "crates/crabcloud-cache",
    "crates/crabcloud-config",
    "crates/crabcloud-core",
    "crates/crabcloud-db",
    "crates/crabcloud-filecache",
    "crates/crabcloud-fs",
    "crates/crabcloud-http",
    "crates/crabcloud-i18n",
    "crates/crabcloud-mail",
    "crates/crabcloud-ocs",
    "crates/crabcloud-preview",
    "crates/crabcloud-publiclinks",
    "crates/crabcloud-sharing",
    "crates/crabcloud-storage",
    "crates/crabcloud-trash",
    "crates/crabcloud-users",
    "crates/crabcloud-versions",
    "crates/crabcloud-zip",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
authors = ["Crabcloud Contributors"]
repository = "https://github.com/robot-head/crabcloud"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "tower-log", "matched-path", "original-uri", "query", "form"] }
base64 = "0.22"
bcrypt = "0.19"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
cookie = { version = "0.18", features = ["percent-encode"] }
dashmap = "6"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
gloo-net = "0.7"
gloo-timers = { version = "0.4", features = ["futures"] }
hayro = "0.7"
hex = "0.4"
hmac = "0.13"
httpdate = "1"
hyper = { version = "1.5", features = ["http1", "server"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
infer = { version = "0.19", default-features = false }
js-sys = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
md-5 = "0.11"
paste = "1"
phf = { version = "0.13", features = ["macros"] }
phf_codegen = "0.13"
rand = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "mysql",
    "postgres",
    "chrono",
    "macros",
    "migrate",
] }
subtle = "2.6"
thiserror = "2"
tempfile = "3"
tera = "1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mysql", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "1.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "limit", "cors", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
urlencoding = "2"
uuid = { version = "1", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
xattr = "1"
zip = { version = "8", default-features = false, features = ["deflate", "deflate-flate2"] }

polib = "0.3"
accept-language = "3.1"
quick-xml = { version = "0.40", features = ["serialize"] }

# Internal workspace deps. Entries are added by subsequent tasks when their crate exists.
crabcloud-app = { path = "crates/crabcloud-app" }
crabcloud-cache = { path = "crates/crabcloud-cache" }
crabcloud-config = { path = "crates/crabcloud-config" }
crabcloud-core = { path = "crates/crabcloud-core" }
crabcloud-db = { path = "crates/crabcloud-db" }
crabcloud-filecache = { path = "crates/crabcloud-filecache" }
crabcloud-fs = { path = "crates/crabcloud-fs" }
crabcloud-http = { path = "crates/crabcloud-http" }
crabcloud-i18n = { path = "crates/crabcloud-i18n" }
crabcloud-mail = { path = "crates/crabcloud-mail" }
crabcloud-ocs = { path = "crates/crabcloud-ocs" }
crabcloud-preview = { path = "crates/crabcloud-preview" }
crabcloud-publiclinks = { path = "crates/crabcloud-publiclinks" }
crabcloud-sharing = { path = "crates/crabcloud-sharing" }
crabcloud-storage = { path = "crates/crabcloud-storage" }
crabcloud-trash = { path = "crates/crabcloud-trash" }
crabcloud-users = { path = "crates/crabcloud-users" }
crabcloud-versions = { path = "crates/crabcloud-versions" }
crabcloud-zip = { path = "crates/crabcloud-zip" }
email_address = "0.2"
rpassword = "7"
assert_cmd = "2"

# Dioxus 0.7 fullstack. Sub-features `server` and `web` are mutually exclusive
# and are selected by the consuming crate (or by `dx serve`), not here.
dioxus = { version = "0.7", default-features = false, features = ["macro", "html", "signals", "hooks", "router", "fullstack", "document", "launch", "asset"] }
rust-embed = { version = "8", features = ["debug-embed", "include-exclude", "interpolate-folder-path"] }

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
