[package]
name = "crabcloud-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

# `dx build --platform web` compiles this against `wasm32-unknown-unknown` to
# produce the browser bundle. The native build is a no-op stub (the real
# server binary is `crabcloud-server`).
[[bin]]
name = "crabcloud-app"
path = "src/main.rs"

[features]
# Sub-features are mutually exclusive and selected by the consumer:
# - `dx` (or `cargo build --target wasm32-...`) enables `web` for the WASM client.
# - Native server binaries that link `crabcloud-app` enable `server`.
default = []
server = [
    "dioxus/server",
    "dep:axum",
    "dep:crabcloud-cache",
    "dep:crabcloud-core",
    "dep:crabcloud-fs",
    "dep:crabcloud-http",
    "dep:crabcloud-i18n",
    "dep:crabcloud-storage",
    "dep:crabcloud-users",
    "dep:hex",
    "dep:rand",
    "dep:tracing",
]
web = ["dioxus/web"]

[dependencies]
dioxus = { workspace = true }
gloo-net = { workspace = true }
gloo-timers = { workspace = true }
js-sys = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Blob",
    "DataTransfer",
    "Document",
    "DragEvent",
    "File",
    "FileList",
    "Headers",
    "HtmlInputElement",
    "Request",
    "RequestInit",
    "Response",
    "Window",
] }

# Server-only deps used inside `#[server]` function bodies and the server-side
# context bridge. Gated behind the `server` feature so the WASM build never
# sees them.
axum = { workspace = true, optional = true }
crabcloud-cache = { workspace = true, optional = true }
crabcloud-core = { workspace = true, optional = true }
crabcloud-fs = { workspace = true, optional = true }
crabcloud-http = { workspace = true, optional = true }
crabcloud-i18n = { workspace = true, optional = true }
crabcloud-storage = { workspace = true, optional = true }
crabcloud-users = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }
crabcloud-config = { workspace = true, features = ["test-support"] }
crabcloud-core = { workspace = true }
crabcloud-http = { workspace = true }
crabcloud-sharing = { workspace = true }
crabcloud-users = { workspace = true }
dioxus = { workspace = true, features = ["server"] }
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }

[[test]]
name = "server_fns_files"
required-features = ["server"]

[lints]
workspace = true
