[package]
name = "crabcloud-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

# `dx build --release` (with the web platform set in `Dioxus.toml`) compiles
# this against `wasm32-unknown-unknown` to produce the browser bundle. The
# native build IS the server binary — full axum stack + CLI subcommands.
[[bin]]
name = "crabcloud-app"
path = "src/main.rs"

[features]
# Sub-features are mutually exclusive and selected by the consumer:
# - `dx build --platform web` enables `web` for the WASM client. dx invokes
#   cargo with `--no-default-features --features web`, so the native-only
#   `server` default is dropped on that build.
# - Native `cargo build -p crabcloud-app` uses the default `server` feature,
#   pulling in the dioxus fullstack runtime needed by `#[server]` endpoints.
default = ["server"]
server = ["dioxus/server"]
web = ["dioxus/web"]

[dependencies]
# Shared (both wasm + native) deps. The explicit `features = ["fullstack"]`
# at the crate level is what dx 0.7 reads to detect fullstack mode (it
# inspects Cargo.toml's literal feature list, not the resolved workspace
# inheritance). The workspace dep already includes `fullstack` in its
# features, so this is redundant for the build graph but load-bearing for
# `dx build --release` — without it, dx builds only the server side and
# never produces the WASM client bundle / `index.html`.
dioxus = { workspace = true, features = ["fullstack"] }
serde.workspace = true
serde_json = { workspace = true }

# Used by the trash bin UI (`pages::trash`) to format deleted-at unix
# timestamps for display. The workspace dep pins `default-features = false`
# + `clock`, which keeps the wasm bundle slim while still pulling in the
# `js-sys`-backed `Utc::now` for any future relative-time work.
chrono = { workspace = true }

# Web-platform deps used by the chunked-upload state machine in
# `pages::files::upload` and the CSRF fetch interceptor in `app.rs`. They're
# referenced under `#[cfg(target_arch = "wasm32")]` so the native (server)
# build doesn't actually link them — anchor with `use … as _;` in lib.rs to
# silence `unused_crate_dependencies` on the server.
gloo-net = { workspace = true }
gloo-timers = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Blob",
    "DataTransfer",
    "Document",
    "DragEvent",
    "File",
    "FileList",
    "Headers",
    "HtmlInputElement",
    "Request",
    "RequestInit",
    "Response",
    "Window",
] }

# Native-only deps. The CLI binary (main.rs, cli.rs, telemetry.rs) and the
# server-side bodies of `#[server]` functions consume these directly. Cargo's
# target-cfg deps are not resolved at all on the wasm32 build, so none of the
# server stack (sqlx, axum, hyper, …) tries to compile for wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
crabcloud-activity = { workspace = true }
crabcloud-cache = { workspace = true }
crabcloud-config = { workspace = true }
crabcloud-core = { workspace = true }
crabcloud-fs = { workspace = true }
crabcloud-http = { workspace = true }
crabcloud-i18n = { workspace = true }
crabcloud-publiclinks = { workspace = true }
crabcloud-sharing = { workspace = true }
crabcloud-storage = { workspace = true }
crabcloud-trash = { workspace = true }
crabcloud-users = { workspace = true }
crabcloud-versions = { workspace = true }
# `dx serve` sets `IP` + `PORT` env vars on the spawned server. We read them
# via `fullstack_address_or_localhost()` so the dev-server `Cmd::Serve` binds
# where dx expects. Already a transitive of `dioxus`; declared direct so we
# can reference the module name without leaning on the dep-graph quirk.
dioxus-cli-config = { version = "0.7" }
hex = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
crabcloud-config = { workspace = true, features = ["test-support"] }
crabcloud-core = { workspace = true }
crabcloud-http = { workspace = true }
crabcloud-publiclinks = { workspace = true }
crabcloud-sharing = { workspace = true }
crabcloud-storage = { workspace = true }
crabcloud-trash = { workspace = true }
crabcloud-users = { workspace = true }
crabcloud-versions = { workspace = true }
dioxus = { workspace = true, features = ["server"] }
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }

# Host-only dev deps: kept out of the WASM graph via `cfg(not(wasm32))`.
# - `crabcloud-preview` pulls `image` + `hayro`; the parity test in
#   `pages::preview_mime` imports the real `provider_for_mime` on the host
#   without polluting the browser bundle.
# - `crabcloud-mail` is the source of truth for `EventType`; the parity test
#   in `server_fns::notification_prefs` cross-checks our local
#   `KNOWN_EVENT_TYPES` allowlist against `EventType::from_str` so the two
#   lists can't silently drift. `crabcloud-mail` deliberately stays out of
#   the WASM dep graph (it pulls the SMTP stack).
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
crabcloud-preview = { workspace = true }
crabcloud-mail = { workspace = true }

[[test]]
name = "server_fns_files"
required-features = ["server"]

[[test]]
name = "server_fns_public_link"
required-features = ["server"]

[[test]]
name = "server_fns_trash"
required-features = ["server"]

[[test]]
name = "server_fns_versions"
required-features = ["server"]

[lints]
workspace = true
