[package]
name = "crabcloud-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
crabcloud-activity.workspace = true
crabcloud-cache.workspace = true
crabcloud-config.workspace = true
crabcloud-db.workspace = true
crabcloud-filecache.workspace = true
crabcloud-fs.workspace = true
crabcloud-i18n.workspace = true
crabcloud-mail.workspace = true
crabcloud-ocs.workspace = true
crabcloud-preview.workspace = true
crabcloud-publiclinks.workspace = true
crabcloud-sharing.workspace = true
crabcloud-storage.workspace = true
crabcloud-trash.workspace = true
crabcloud-users.workspace = true
crabcloud-versions.workspace = true
dashmap.workspace = true
serde_json.workspace = true
secrecy.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing.workspace = true

[dev-dependencies]
crabcloud-config = { workspace = true, features = ["test-support"] }
paste.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-test.workspace = true

[lints]
workspace = true
