[package]
name = "crabcloud-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
crabcloud-activity.workspace = true
crabcloud-filecache.workspace = true
crabcloud-sharing.workspace = true
crabcloud-storage.workspace = true
crabcloud-trash.workspace = true
crabcloud-users.workspace = true
crabcloud-versions.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync", "macros"] }
tracing.workspace = true

[dev-dependencies]
crabcloud-cache.workspace = true
crabcloud-config = { workspace = true, features = ["test-support"] }
crabcloud-core.workspace = true
crabcloud-db.workspace = true
crabcloud-search.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }

[lints]
workspace = true
