[package]
name = "crabcloud-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
cookie.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
httpdate.workspace = true
quick-xml.workspace = true
rand.workspace = true
crabcloud-cache.workspace = true
crabcloud-core.workspace = true
crabcloud-fs.workspace = true
crabcloud-filecache.workspace = true
crabcloud-ocs.workspace = true
crabcloud-storage.workspace = true
crabcloud-users.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["io"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
urlencoding.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
crabcloud-config = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
