[package]
name = "crabcloud-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
cookie.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
httpdate.workspace = true
quick-xml.workspace = true
rand.workspace = true
crabcloud-activity.workspace = true
crabcloud-cache.workspace = true
crabcloud-core.workspace = true
crabcloud-fs.workspace = true
crabcloud-filecache.workspace = true
crabcloud-ocs.workspace = true
crabcloud-preview.workspace = true
crabcloud-publiclinks.workspace = true
crabcloud-sharing.workspace = true
crabcloud-storage.workspace = true
crabcloud-trash.workspace = true
crabcloud-users.workspace = true
crabcloud-versions.workspace = true
crabcloud-zip.workspace = true
chrono.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
urlencoding.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
crabcloud-config = { workspace = true, features = ["test-support"] }
crabcloud-mail.workspace = true
image.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
zip.workspace = true

[lints]
workspace = true
