[package]
name = "crabcloud-publiclinks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
bcrypt = { workspace = true }
crabcloud-users = { workspace = true }
dashmap = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
