[package]
name = "crabcloud-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "crabcloud-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
crabcloud-config.workspace = true
crabcloud-core.workspace = true
crabcloud-http.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
