[package]
name = "crabcloud-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
hex.workspace = true
infer.workspace = true
phf.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync", "macros"] }
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
xattr.workspace = true

[build-dependencies]
phf_codegen.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }

[lints]
workspace = true
